step 4: Angular UI

--- a/angular.json
+++ b/angular.json
@@ -26,9 +26,10 @@
             "aot": true,
             "assets": [
               "src/assets",
-              "src/assets/favicon.png",
+              "src/assets/favicon.png"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css"
             ],
             "scripts": []
@@ -68,7 +69,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ui:build"
+            "browserTarget": "ui:build",
+            "proxyConfig": "proxy.conf.js"
           },
           "configurations": {
             "production": {
@@ -125,6 +127,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "ui"
 }
