--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng test --no-watch --code-coverage && ng build --prod",
+    "build": "ng test --browsers ChromeHeadless --no-watch --code-coverage && ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
