--- a/.github/workflows/mvn-package.yml
+++ b/.github/workflows/mvn-package.yml
@@ -17,4 +17,4 @@ jobs:
         if: contains(matrix.os, 'win') == false
         run: chmod +x ./mvnw
       - name: Build with Maven
-        run: ./mvnw package --file pom.xml
+        run: ./mvnw clean package --file pom.xml
