--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: CI
 
-on: [push, pull_request]
+on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,3 +18,11 @@ jobs:
         run: chmod +x ./mvnw
       - name: Build with Maven
         run: ./mvnw clean package --file pom.xml
+      - name: Build the Docker image
+        run: docker build -t baoloc . --file Dockerfile --tag ch4mp/baoloc:0.0.1-SNAPSHOT
+      - name: Publish to Registry
+        uses: elgohr/Publish-Docker-Github-Action@master
+        with:
+          name: ch4mp/baoloc:0.0.1-SNAPSHOT
+          username: ch4mp
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
