add azure registry

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,12 +22,6 @@ jobs:
         run: docker build -t baoloc . --file Dockerfile
       - name: Tag Docker image for Dockerhub
         run: docker tag baoloc ch4mp/baoloc:0.0.1-SNAPSHOT
-      - name: Publish to Dockerhub
-        uses: elgohr/Publish-Docker-Github-Action@master
-        with:
-          name: ch4mp/baoloc:0.0.1-SNAPSHOT
-          username: ch4mp
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Tag Docker image for Azure
         run: docker tag baoloc baolocregistry.azurecr.io/baoloc:0.0.1-SNAPSHOT
       - name: Publish to Azure
@@ -36,3 +30,10 @@ jobs:
           name: baolocregistry.azurecr.io/baoloc:0.0.1-SNAPSHOT
           username: baolocregistry
           password: ${{ secrets.AZURE_PASSWORD }}
+          registry: baolocregistry.azurecr.io
+      - name: Publish to Dockerhub
+        uses: elgohr/Publish-Docker-Github-Action@master
+        with:
+          name: ch4mp/baoloc:0.0.1-SNAPSHOT
+          username: ch4mp
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
