--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ui": {
+    "bao-loc": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -16,6 +16,7 @@
       "prefix": "app",
       "architect": {
         "build": {
+          "sourceLocale": "fr",
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "target/classes/static",
@@ -69,19 +70,19 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ui:build",
+            "browserTarget": "bao-loc:build",
             "proxyConfig": "proxy.conf.js"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ui:build:production"
+              "browserTarget": "bao-loc:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ui:build"
+            "browserTarget": "bao-loc:build"
           }
         },
         "test": {
@@ -118,16 +119,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ui:serve"
+            "devServerTarget": "bao-loc:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ui:serve:production"
+              "devServerTarget": "bao-loc:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "ui"
+  "defaultProject": "bao-loc"
 }
