--- a/angular-workspace/projects/bao-loc/android/app/src/main/AndroidManifest.xml
+++ b/angular-workspace/projects/bao-loc/android/app/src/main/AndroidManifest.xml
@@ -34,14 +34,7 @@
             <action android:name="android.intent.action.VIEW" />
             <category android:name="android.intent.category.DEFAULT" />
             <category android:name="android.intent.category.BROWSABLE" />
-            <data android:scheme="https" android:host="device.bao-loc.c4-soft.com" />
-          </intent-filter>
-
-          <intent-filter>
-            <action android:name="android.intent.action.VIEW" />
-            <category android:name="android.intent.category.DEFAULT" />
-            <category android:name="android.intent.category.BROWSABLE" />
-            <data android:scheme="https" android:host="localhost" />
+            <data android:scheme="https" android:host="bao-loc.c4-soft.com" />
           </intent-filter>
         </activity>
 
