--- a/bao-loc/pom.xml
+++ b/bao-loc/pom.xml
@@ -622,7 +622,7 @@
 
 							<configuration>
 
-								<apiDocsUrl>http://${integration-tests.hostname}:${integration-tests.port}/v3/api-docs
+								<apiDocsUrl>https://${integration-tests.hostname}:${integration-tests.port}/v3/api-docs
 								</apiDocsUrl>
 
 								<outputFileName>${project.artifactId}.openapi.json</outputFileName>
