--- a/angular-workspace/angular.json
+++ b/angular-workspace/angular.json
@@ -44,6 +44,7 @@
               { "glob": "**/*.svg", "input": "projects/bao-loc/node_modules/ionicons/dist/ionicons/svg", "output": "./svg" }
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "projects/bao-loc/src/styles.scss"
             ],
             "scripts": []
@@ -120,6 +121,7 @@
               { "glob": "**/*.svg", "input": "projects/bao-loc/node_modules/ionicons/dist/ionicons/svg", "output": "./svg" }
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "projects/bao-loc/src/styles.scss"
             ],
             "scripts": []
