single-module API

--- a/bao-loc/src/main/resources/application.properties
+++ b/bao-loc/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 server.port=8080
 server.shutdown=graceful
-server.ssl.enabled=true
-server.ssl.key-store=classpath:self_signed.jks
 
 spring.datasource.url=jdbc:h2:mem:sample;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
@@ -10,11 +8,10 @@ spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.hbm2ddl.charset_name=UTF-8
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-ch4mpy.eu.auth0.com/
-com.c4-soft.springaddons.security.auth0.roles-claim=https://manage.auth0.com/roles
-
-com.c4-soft.springaddons.security.cors.path=/solutions/**
-com.c4-soft.springaddons.security.cors.allowed-origins=https://localhost,https://bravo-ch4mp:8100,https://bravo-ch4mp:4200
+com.c4-soft.springaddons.security.token-issuers[0].location=https://localhost:8443/realms/master
+com.c4-soft.springaddons.security.token-issuers[0].authorities.claims=realm_access.roles,resource_access.bao-loc.roles
+com.c4-soft.springaddons.security.cors[0].path=/solutions/**
+com.c4-soft.springaddons.security.cors[0].allowed-origins=https://localhost,https://localhost:8100,https://localhost:4200,https://bravo-ch4mp:8100,https://bravo-ch4mp:4200,https://mc-ch4mp.local:8100,https://mc-ch4mp.local:4200
 com.c4-soft.springaddons.security.permit-all=/solutions/**,/actuator/health/readiness,/actuator/health/liveness,/v3/api-docs/**
 
 management.endpoint.health.probes.enabled=true
@@ -23,10 +20,7 @@ management.health.livenessstate.enabled=true
 management.endpoints.web.exposure.include=*
 spring.lifecycle.timeout-per-shutdown-phase=30s
 
-springdoc.api-docs.enabled=false
-
 #---
 spring.config.activate.on-profile=openapi
 server.port=8080
-springdoc.api-docs.enabled=true
 #---
