--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-server.port=8080
 server.shutdown=graceful
 
 spring.datasource.url=jdbc:h2:mem:sample;DB_CLOSE_DELAY=-1
@@ -8,8 +7,8 @@ spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.hbm2ddl.charset_name=UTF-8
 
-com.c4-soft.springaddons.security.token-issuers[0].location=https://localhost:8443/realms/master
-com.c4-soft.springaddons.security.token-issuers[0].authorities.claims=realm_access.roles,resource_access.bao-loc.roles
+com.c4-soft.springaddons.security.jwt-issuers[0].location=https://localhost:8443/realms/master
+com.c4-soft.springaddons.security.jwt-issuers[0].authorities.claims=realm_access.roles,resource_access.bao-loc.roles
 com.c4-soft.springaddons.security.cors[0].path=/solutions/**
 com.c4-soft.springaddons.security.cors[0].allowed-origins=https://localhost,https://localhost:8100,https://localhost:4200,https://bravo-ch4mp:8100,https://bravo-ch4mp:4200,https://mc-ch4mp.local:8100,https://mc-ch4mp.local:4200
 com.c4-soft.springaddons.security.permit-all=/solutions/**,/actuator/health/readiness,/actuator/health/liveness,/v3/api-docs/**
