--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -13,16 +13,15 @@ com.c4-soft.springaddons.security.cors.path=/solutions/**
 com.c4-soft.springaddons.security.cors.allowed-origins=https://localhost,https://bravo-ch4mp:8100,https://bravo-ch4mp:4200
 com.c4-soft.springaddons.security.permit-all=/solutions/**,/actuator/health/readiness,/actuator/health/liveness,/v3/api-docs/**
 
+com.c4-soft.springaddons.test.web.default-media-type=application/json
+
 management.endpoint.health.probes.enabled=true
 management.health.readinessstate.enabled=true
 management.health.livenessstate.enabled=true
 management.endpoints.web.exposure.include=*
 spring.lifecycle.timeout-per-shutdown-phase=30s
 
-springdoc.api-docs.enabled=false
-
 #---
 spring.config.activate.on-profile=openapi
 server.port=8080
-springdoc.api-docs.enabled=true
 #---
