--- a/angular-workspace/package.json
+++ b/angular-workspace/package.json
@@ -13,26 +13,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.0",
-    "@angular/cdk": "^13.2.2",
-    "@angular/common": "~13.2.0",
-    "@angular/compiler": "~13.2.0",
-    "@angular/core": "~13.2.0",
-    "@angular/forms": "~13.2.0",
-    "@angular/material": "^13.2.2",
-    "@angular/platform-browser": "~13.2.0",
-    "@angular/platform-browser-dynamic": "~13.2.0",
-    "@angular/router": "~13.2.0",
-    "angular-oauth2-oidc": "^13.0.1",
+    "@angular/animations": "^14.1.3",
+    "@angular/cdk": "^14.1.2",
+    "@angular/common": "^14.1.3",
+    "@angular/compiler": "^14.1.3",
+    "@angular/core": "^14.1.3",
+    "@angular/forms": "^14.1.3",
+    "@angular/material": "^14.1.2",
+    "@angular/material-moment-adapter": "^14.1.2",
+    "@angular/platform-browser": "^14.1.3",
+    "@angular/platform-browser-dynamic": "^14.1.3",
+    "@angular/router": "^14.1.3",
+    "angular-auth-oidc-client": "^14.1.3",
+    "moment": "^2.29.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.1",
-    "@angular/cli": "~13.2.0",
-    "@angular/compiler-cli": "~13.2.0",
-    "@ionic/angular-toolkit": "^5.0.3",
+    "@angular-devkit/build-angular": "^14.1.3",
+    "@angular/cli": "^14.1.3",
+    "@angular/compiler-cli": "^14.1.3",
+    "@ionic/angular-toolkit": "^7.0.0",
     "@openapitools/openapi-generator-cli": "^2.4.26",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
@@ -42,7 +44,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "ng-packagr": "^13.0.0",
-    "typescript": "~4.5.2"
+    "ng-packagr": "^14.1.0",
+    "typescript": "~4.7.4"
   }
 }
