--- a/angular-workspace/projects/bao-loc/package.json
+++ b/angular-workspace/projects/bao-loc/package.json
@@ -12,20 +12,20 @@
   "author": "ch4mp@c4-soft.com",
   "license": "ISC",
   "dependencies": {
-    "@awesome-cordova-plugins/core": "^5.39.0",
-    "@awesome-cordova-plugins/deeplinks": "^5.39.0",
-    "@capacitor/android": "3.4.0",
-    "@capacitor/app": "1.1.0",
-    "@capacitor/core": "3.4.0",
-    "@capacitor/haptics": "1.1.4",
-    "@capacitor/keyboard": "1.2.1",
-    "@capacitor/status-bar": "1.0.7",
-    "@ionic/angular": "^6.0.4",
+    "@awesome-cordova-plugins/core": "^5.44.0",
+    "@awesome-cordova-plugins/deeplinks": "^5.44.0",
+    "@capacitor/android": "^4.0.1",
+    "@capacitor/app": "^4.0.1",
+    "@capacitor/core": "^4.0.1",
+    "@capacitor/haptics": "^4.0.1",
+    "@capacitor/keyboard": "^4.0.1",
+    "@capacitor/status-bar": "^4.0.1",
+    "@ionic/angular": "^6.2.3",
     "@ionic/storage-angular": "^3.0.6",
     "ionic-plugin-deeplinks": "^1.0.24",
-    "ionicons": "^6.0.1"
+    "ionicons": "^6.0.2"
   },
   "devDependencies": {
-    "@capacitor/cli": "3.4.0"
+    "@capacitor/cli": "^4.0.1"
   }
 }
