--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.hbm2ddl.charset_name=UTF-8
 
-com.c4-soft.springaddons.security.jwt-issuers[0].location=https://localhost:8443/realms/master
-com.c4-soft.springaddons.security.jwt-issuers[0].authorities.claims=realm_access.roles,resource_access.bao-loc.roles
+com.c4-soft.springaddons.security.issuers[0].location=https://dev-ch4mpy.eu.auth0.com/
+com.c4-soft.springaddons.security.issuers[0].authorities.claims=groups
 com.c4-soft.springaddons.security.cors[0].path=/solutions/**
 com.c4-soft.springaddons.security.cors[0].allowed-origins=https://localhost,https://localhost:8100,https://localhost:4200,https://bravo-ch4mp:8100,https://bravo-ch4mp:4200,https://mc-ch4mp.local:8100,https://mc-ch4mp.local:4200
 com.c4-soft.springaddons.security.permit-all=/solutions/**,/actuator/health/readiness,/actuator/health/liveness,/v3/api-docs/**
@@ -20,6 +20,9 @@ management.endpoints.web.exposure.include=*
 spring.lifecycle.timeout-per-shutdown-phase=30s
 
 #---
-spring.config.activate.on-profile=openapi
-server.port=8080
+spring.config.activate.on-profile=bravo-ch4mp
+com.c4-soft.springaddons.security.issuers[0].location=https://localhost:8443/realms/master
+com.c4-soft.springaddons.security.issuers[0].authorities.claims=realm_access.roles,resource_access.bao-loc-public.roles
+com.c4-soft.springaddons.security.issuers[1].location=https://bravo-ch4mp:8443/realms/master
+com.c4-soft.springaddons.security.issuers[1].authorities.claims=realm_access.roles,resource_access.bao-loc-public.roles
 #---
